added some shadcn goodness

--- a/app/globals.css
+++ b/app/globals.css
@@ -76,3 +76,16 @@
     @apply bg-background text-foreground min-h-full;
   }
 }
+
+body {
+  font-family: var(--font-libre_franklin), sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-libre_franklin), sans-serif;
+}
